css/style.css
/* ... */
nav.login {
    right: 0px;
}

header nav {
    position: absolute;
    top: 37px;
    right: 194px;
    width: auto;
    height: auto;
    float: right;
    background: transparent;
    box-shadow: none;
    margin: 0 20px 0 0;
}

nav ul li {
    float: left;
    height: 30px;
}

nav ul li span ,
nav ul li a {
    text-transform: uppercase;
    color: #8b9296;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
    padding: 0 18px;
    display: block;
    text-decoration: none;
    /*-moz-transition: color 300ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;*/
    /*-o-transition: color 300ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;*/
    /*-webkit-transition: color 300ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;*/
    /*transition: color 300ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;*/
    line-height: 18px;
    /*font-family: "HelveticaNeue Light", sans-serif;*/
    font-family: Verdana, Arial, sans-serif;
    font-size: 14px;
    letter-spacing: 0.7px;
}

nav>ul>li:hover{
    position: relative;
    z-index: 1000;
}

nav>ul>li:hover a:first-child{

}


nav ul li ul{
    display: none;
    position: absolute;
    background-color: #ffffff;
    top: 30px;
    -moz-box-shadow: 2px 2px 5px #e6e8e8;
    box-shadow: 2px 2px 5px #e6e8e8;
}
nav ul li:hover ul{
    display: block;
}

nav ul li ul li:hover a{
    color: #424c58;
}
nav ul li ul li:hover{
    background-color: #DAD9D4;
    color: #424c58;
    font-weight: bold;
}
nav ul li ul li a{
    line-height: 30px;
}
nav ul li ul li{
    display: block;
    float: none;
    height: 30px;
    line-height: 30px;
}

nav ul li.active a,
nav ul li a:hover {
    color: #44bbcc;
    background: 0;
    padding: 0 18px;
    box-shadow: none;
}

.login-nav {
    width: auto;
    float: right;
    background: transparent;
    box-shadow: none;
    margin: 0;
    height: auto;
    top: -39px;
    right: 29px;
    position: absolute;
}

.chertochka {
    top: 0px;
    right: 0px;
    width: 2px;
    height: 16px;
    background: url('../images/chertochka.png') no-repeat;
}

.minisocials {
    position: absolute;
    width: 66px;
    height: 22px;
    top: 31px;
    right: 120px;
    width: 66px;
    height: 22px;
}

.minisocials li {
    display: block;
    float: left;
}

.minisocials a {
    display: block;
    width: 22px;
    height: 22px;
    float: left;
    padding: 0;
    background-repeat: no-repeat;
    /*background: url(../i/img_13.png);*/
    background-image: url(../img/social.png);
}

.minisocials .fb {
    background-position: 5px -36px;
}

.minisocials .fb:hover {
    background-position: 5px -35px;
}

.minisocials .twitter {
    background-position: 5px 5px;
}

.minisocials .twitter:hover {
    background-position: 5px 6px;
}

.minisocials .vk {
    background-position: 5px -15px;
}

.minisocials .vk:hover {
    background-position: 5px -14px;
}

a {
    color: #666;
    text-decoration: underline;
    outline: none;
}

a:hover {
    text-decoration: none;
}

ul, ol {
    list-style: none;
}

.fl {
    float: left;
}

.fr {
    float: right;
}

.clear {
    clear: both;
}

.in {
    width: 960px;
    margin: 0 auto;
}

.advert-block {
    width: 600px;
}

.advert-preview {
    float: right;
    width: 230px;
    font-weight: 300;
    color: #252525;
}

.price-block {
    width: 730px;
    display: inline-block;
    margin-top: 40px;
}

.price-preview {
    float: right;
    width: 100px;
    display: inline-block;
    margin-top: 52px;
}

.advert-title {
    color: #525252;
    font-size: 22px;
    font-weight: 300;
    margin-bottom: 30px;
}

.advert-text {
    color: #525252;
    font-size: 15px;
    float: right;
}

.advert-phone {
    color: #525252;
    font-size: 25px;
    float: right;
}

.advert-mail {
    color: #9aab51;
    float: right;
    font-size: 14px;
    margin-top: -2px;
}

.price-title {
    color: #525252;
    font-size: 13px;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 700;
}

.img-phone {
    background: url('../i/phone.png') no-repeat;
    margin: 8px;
    width: 41px;
    height: 71px;
}

.img-phones {
    background: url('../i/phones.png') no-repeat;
    margin: 8px;
    width: 96px;
    height: 71px;
}

.comment-price {
    font-weight: bold;
    color: #525252;
    font-size: 15px;
}

.views-price {
    font-weight: bold;
    color: #9aab51;
    font-size: 15px;
    cursor: pointer;
    margin-left: 8px;
}

.presentation {
    width: 18px;
    height: 28px;
    vertical-align: middle;
    background-image: url('../i/ct-sprite.png');
    background-repeat: no-repeat;
    background-position: 0 -1142px;
    display: inline-block;
    cursor: pointer;
}

.price-click {
    float: right;
    color: #7c7974;
    font-size: 13px;
    font-family: Helvetica, Arial, san-serif;
    font-weight: 300;
}

.rules-block {
    width: 730px;
    display: inline-block;
    margin-top: 30px;
}

.price-rules {
    margin-bottom: 50px;
    color: #7c7974;
    font-size: 14px;
    font-weight: 300;
}

.price-rules span {
    font-family: Helvetica, Arial, sans-serif;
}

.price-technical {
    font: 26px/1 "PFDinDisplayPro", sans-serif;
    font-weight: 700;
    color: #7c7974;
    line-height: 36px;
}

.price-download {
    font: 26px/1 "PFDinDisplayPro", sans-serif;
    font-weight: 300;
    color: #58b0d7;
    line-height: 36px;
    margin-left: 12px;
    cursor: pointer;
}

.statistic {
    width: 19px;
    height: 28px;
    vertical-align: middle;
    background-image: url('../i/ct-sprite.png');
    background-repeat: no-repeat;
    background-position: 0 -1173px;
    margin: 0 0 0 4px;
    display: inline-block;
    cursor: pointer;
}

.title {
    width: 920px;
    margin-top: 45px;
    margin-right: auto;
    margin-bottom: 32px;
    margin-left: auto;
}
/* ... */

